# Molecule

./: README.md
data/: X_train.npy  templates.json  y_train.npy
flipper_app/: application.fam  fap_retrosynth.c
logs/: cli-dump (1).txt  cli-dump (2).txt  cli-dump (3).txt  cli-dump (4).txt  cli-dump (5).txt  cli-dump (6).txt  cli-dump (7).txt  cli-dump.txt
pico_firmware/: CMakeLists.txt  main.c  mcts.c  mcts.h  nn_inference.c  nn_inference.h  nn_weights.h  smiles_draw.c  smiles_draw.h  smiles_hash.c  smiles_hash.h
training/: data_prep.py  export_to_c.py  requirements.txt  run_pipeline.sh  train_pico_model.py
training/models/: policy_net.pth
